# esp-mgba

./: .gitmodules  CMakeLists.txt  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  board.c  config.c  esp-mgba.c  esp-mgba.h  socket.c  spi.c  wifi.c
